--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,27 @@
-apturl==0.5.2
-asn1crypto==0.24.0
-Brlapi==0.6.6
 certifi==2018.11.29
-cffi==1.11.5
 chardet==3.0.4
-command-not-found==0.3
-cryptography==2.3.1
-cupshelpers==1.0
-defer==1.0.6
 defusedxml==0.5.0
-distro-info==0.18
-Django==2.1.5
+Django==2.1.3
 django-debug-toolbar==1.11
 django-debug-toolbar-template-profiler==1.0.2
 django-extensions==2.1.5
-graphviz==0.10.1
-httplib2==0.11.3
+gunicorn==19.9.0
 idna==2.8
-jeepney==0.4
-keyring==10.6.0
-keyrings.alt==3.0
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-louis==3.5.0
-macaroonbakery==1.1.3
-Mako==1.0.7
-MarkupSafe==1.0
-netifaces==0.10.4
-oauth==1.0.1
 oauthlib==3.0.0
-olefile==0.45.1
-pexpect==4.2.1
-Pillow==5.1.0
-protobuf==3.0.0
-pycairo==1.16.2
-pycparser==2.19
-pycrypto==2.6.1
-pycups==1.9.73
+Pillow==5.4.1
+psycopg2==2.7.7
+psycopg2-binary==2.7.7
 pydotplus==2.0.2
-pygobject==3.26.1
-pyinotify==0.9.6
 PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.1.2
 pyparsing==2.3.1
-PyQt5==5.11.3
-PyQt5-sip==4.19.13
-pyRFC3339==1.0
-python-apt==1.6.3
-python-debian==0.1.32
 python-memcached==1.59
 python3-openid==3.1.0
 pytz==2018.9
-pyxdg==0.25
-PyYAML==3.12
-reportlab==3.4.0
 requests==2.21.0
-requests-oauthlib==1.1.0
-requests-unixsocket==0.1.5
-SecretStorage==3.1.0
-simplejson==3.13.2
+requests-oauthlib==1.2.0
 six==1.12.0
 social-auth-app-django==3.1.0
-social-auth-core==2.0.0
+social-auth-core==3.0.0
 sqlparse==0.2.4
-system-service==0.3
-systemd-python==234
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
 urllib3==1.24.1
-usb-creator==0.3.3
-vboxapi==1.0
-virtualenv==16.2.0
-wadllib==1.3.2
-xkit==0.0.0
-zope.interface==4.3.2
+pkg-resources==0.0.0
